feat: cli and symlink action

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,12 +14,12 @@ install_requires =
 [options.packages.find]
 where = src
 include =
-    dot
-    dot.*
+    dotdot
+    dotdot.*
 
 [options.entry_points]
 console_scripts =
-  dotfiles = dot.cli:main
+  dotdot = dotdot.cli:main
 
 [yapf]
 based_on_style=google
