--- a/test/dots/pkg1/spec.yaml
+++ b/test/dots/pkg1/spec.yaml
@@ -17,3 +17,6 @@ actions:
       [ "a" == "b" ]
       echo cmd4
 - execute: ./cmd.sh
+- git_clone:
+    - url: https://github.com/kassick/evil-iedit-state
+      to: tmp/evil-iedit-state
