feat: help-actions command

--- a/examples/dots/zsh/spec.yaml
+++ b/examples/dots/zsh/spec.yaml
@@ -4,6 +4,5 @@ actions:
 - git_clone:
     - url: https://github.com/ohmyzsh/ohmyzsh.git
       to: .oh-my-zsh
-- link:
-    - zprofile
-    - zshrc
+- link: zshrc
+- copy: zprofile
