chore: git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -147,4 +147,7 @@ pyrightconfig.json
 # pyenv
 .python-version
 
+# pyright
+pyrightconfig.json
+
 # End of https://www.toptal.com/developers/gitignore/api/python
